updated nav menu contents

--- a/_data/pageconfig/index.yml
+++ b/_data/pageconfig/index.yml
@@ -1,5 +1,5 @@
-tagline_main: Make your business processes efficient,<br />
-tagline_dynamic: at a fraction of the cost, at infinite scale, on your terms 🎯
+tagline_main: Make your business operate efficiently,<br />
+tagline_dynamic: at reduced CapEx, at optimal OpEx, at infinite scale, on your terms 🎯
 tagline_dynamic_delay: 75
 tagline_cta: Paying too much for too little? Need a bespoke solution without the vendor lock-in? Considering the Cloud but lack the in-house expertise?
 
